2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* mailcheck.c:  Minor HIGification of preferences dialog: 
	remove separator; fix widget padding.
	
2003-04-08  Dennis Cranston <dennis_cranston at yahoo.com>

	* mailcheck.c:  HIGify the preferences dialog. Also,
	fix a few error messages.
	* help/C/mailcheck.xml:  Update for preference dialog 
	changes.

2003-04-07  Dennis Cranston <dennis_cranston at yahoo.com>

	* GNOME_MailCheckApplet.xml:  Minor HIG cleanup for
	the popup menu. Changed "Check for mail" to "_Update".  
	Moved "_Update" to top of popup menu.  Added a separator.  
	
2003-04-03  Kevin Vandersloot <kfv101@psu.edu>

	* mailcheck.c: Fix statis variable usage so that multiple mailchecks can be used. Patch
	by Jens Zechlin. Fixes bug #109806

2003-03-27  Glynn Foster  <glynn.foster@sun.com>

	* egg-screen*: Remove - we don't need these anymore.
	* help/*: Use 'figs' instead of 'figdir' until we update
	the build system.

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* *: copy mailcheck applet over from gnome-panel and
	fixup the build.

	* help/*: copy over the help docs too.

2003-03-06  Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>

	* mailcheck.c: Added a new error handler.
	* popcheck.[ch] (connect_socket): Retrun proper failure status
	* remote-helper.[ch]: Call the error handler on error conditions
	* solves bug #104891

2003-03-06  Satyajit Kanungo  <satyajit.kanungo@wipro.com>

	* mailcheck.c Create the pixmap for the corresponding screen the
	  applet is present on.Fixes bug #104720.

2003-02-17  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add support for the GCONF_SCHEMAS_INSTALL
	conditional and the GCONF_SCHEMA_FILE_DIR variable.

2003-01-27  Mark McLoughlin  <mark@skynet.ie>

	* GNOME_MailcheckApplet_Factory.server.in.in,
	  Makefile.am: Copy from gen_util and tweak.

	* mailcheck.c: don't include mailcheck.h.
	(mailcheck_factory): add the code to make it
	an oop factory.
