@@ -1,3 +1,9 @@
+2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* mailcheck.c:  HIGify the action area of the preferences 
+	dialog.  Minor tweak of padding for the spin button unit 
+	labels.
+	
 2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* mailcheck.c:  Minor HIGification of preferences dialog: 
